<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
        <Button
                android:id="@+id/bt_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_insert"/>
        <Button
                android:id="@+id/bt_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_display"/>
        <Button
                android:id="@+id/bt_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_clear"/>
        <Button
                android:id="@+id/bt_deleteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_deleteAll"/>
    </LinearLayout>
    <ListView
            android:id="@+id/content_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    <TextView
            android:id="@+id/empty_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_list"
            android:visibility="gone" />

</LinearLayout>

