<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <EditText
            android:id="@+id/contact_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:hint="@string/contact_name"
            android:imeOptions="actionNext">
    </EditText>


    <EditText
            android:id="@+id/contact_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:hint="@string/contact_email"
            android:imeOptions="actionNext">
    </EditText>

    <EditText
            android:id="@+id/contact_age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/contact_age"
            android:imeOptions="actionNext">
    </EditText>

    <Button
            android:id="@+id/contact_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_confirm_button">
    </Button>

</LinearLayout>